--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -63,7 +63,8 @@
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColorHint="@android:color/primary_text_dark">
+                        android:textColorHint="@android:color/primary_text_dark"
+                        app:hintTextAppearance="@style/HintText">
 
                         <AutoCompleteTextView
                             android:id="@+id/autocomplete_places_from"
@@ -78,7 +79,8 @@
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColorHint="@android:color/primary_text_dark">
+                        android:textColorHint="@android:color/primary_text_dark"
+                        app:hintTextAppearance="@style/HintText">
 
                         <AutoCompleteTextView
                             android:id="@+id/autocomplete_places_to"
